project( glvisualization CXX )

# ---------------------------------------------------------
# GATHER FILES AND INCLUDE DIRECTORIES
# ---------------------------------------------------------


# ---------------------------------------------------------
# LIBRARIES AND EXECUTABLES
# ---------------------------------------------------------


# ---------------------------------------------------------
# INSTALL
# ---------------------------------------------------------
INSTALL_DATA( data )

# ---------------------------------------------------------
# PYTHON
# ---------------------------------------------------------
add_subdirectory(python)